assets/css/style.css
img {
  max-width: 100%;
  height: auto;
  display: block;
}

.tile img {
  width: 100%;
  max-width: 500px;
  height: auto;
  display: block;
  margin: 1rem auto;
}

.header {
  background: #222222;
  color: hsl(0, 0%, 100%);
  padding: 1rem;

  display: flex;
  justify-content: space-between;
  align-items: center;
  
}

.visually-hidden {
    display:none;
}


.hamburger-menu {
    background: none;
    cursor: pointer;
    display: flex;
    flex-direction: column;
    gap: 5px;

}

.hamburger-menu span {
    display: block;
    width: 25px;
    height: 3px;
    background: #fff;
}

.nav {
    display: none;
}

.layout {
    display: block;
    background: #d1d4d4;
    

}

.main {
    display: flex;
    gap: 2rem;
    align-items: flex-start;
    max-width: 1200px;
    margin: 0 auto;
    flex: 3;
    min-width: 0;
    background: #a8d1eb;
    color: rgb(13, 13, 19);
    padding: 1rem;
    
}

.content {
    flex: 3;
    min-width: 0;
}

.aside {
    display: none;
    
}

.tile {
    background: rgb(247, 223, 200);
    color: rgb(65, 0, 139);
    padding: 1rem;
    margin-bottom: 1rem;
    border-radius: 8px;
}

.footer {
    display: flex;
    align-items: flex-start;
    background: rgb(233, 236, 238);
    color: rgb(165, 42, 42);
    padding: 1rem;
    font-size: small;
}

@media (min-width: 768px) {  
    .nav {
        display: flex;
        
    }
    
    .nav ul {
        display: flex;
        gap: 2rem;
        list-style: none;
        text-indent: 1rem;
        margin: 1px;
        padding: 10px;
       
    }
    .hamburger-menu {
        display: none;
    }
    .layout {
        display: flex;
        gap: 3rem;
        max-width: 1500px;
        margin: auto;
        padding: 2rem;
        
    }
    
    .main {
        
        flex: 3;
        max-width: 1500px;
    }

    .aside {
        display: block;
        flex: 1;
        background: rgb(194, 209, 205);
        
    }

    .aside-section {
        background: rgb(215, 217, 218);
        margin: 8px;
        font-family: Helvetica;      
    }

    .aside-heading {
        background: rgb(152, 154, 155);
        font-size: large;    
        margin: 0;
    }

    .aside-content{
        background: rgb(115, 145, 160);
        height: auto;
        min-height: 3rem;
        margin: 0 auto;
    }

    .aside-footer{
        background: rgb(92, 43, 43);
        color:#fff;
        font-size: small;
    }
}

